# configuration approach followed:
# - whenever possible, prefer pyproject.toml
# - for configurations insufficiently supported by pyproject.toml, use setup.cfg instead
# - setup.py discouraged; minimal stub included only for compatibility with legacy tools

# pyproject.toml support for configs outside PEP 621 is currently only in beta
# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[options]
packages = find:
# non-endpoint scripts are not supported in pyproject.toml
scripts =
    bin/brief_salutation
    bin/a_shell_script

[options.package_data]
3DChromatin = py.typed

[options.packages.find]
exclude =
    # the following exclusion is to prevent shipping of tests.
    # if you do include them, add pytest to the required packages.
    *tests*

# flake8 currently does not support pyproject.toml
# see https://github.com/PyCQA/flake8/issues/234
[flake8]
max-line-length = 80
ignore = E203, E501, W503
